[gd_scene load_steps=2 format=3 uid="uid://profile_menu"]

[ext_resource type="Script" path="res://scripts/ui/profile_menu.gd" id="1_profile"]

[node name="ProfileMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_profile")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.03, 0.08, 1)

[node name="SafeAreaMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="MainVBox" type="VBoxContainer" parent="SafeAreaMargin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TopBar" type="HBoxContainer" parent="SafeAreaMargin/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="BackButton" type="Button" parent="SafeAreaMargin/MainVBox/TopBar"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(55, 50)
theme_override_font_sizes/font_size = 24
text = "‚Üê"

[node name="TitleLabel" type="Label" parent="SafeAreaMargin/MainVBox/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "üë§ PROFIL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsPanel" type="HBoxContainer" parent="SafeAreaMargin/MainVBox/TopBar"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PowerPanel" type="PanelContainer" parent="SafeAreaMargin/MainVBox/TopBar/StatsPanel"]
layout_mode = 2

[node name="PowerLabel" type="Label" parent="SafeAreaMargin/MainVBox/TopBar/StatsPanel/PowerPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)
text = "‚öî 50"

[node name="CurrencyPanel" type="PanelContainer" parent="SafeAreaMargin/MainVBox/TopBar/StatsPanel"]
layout_mode = 2

[node name="CurrencyLabel" type="Label" parent="SafeAreaMargin/MainVBox/TopBar/StatsPanel/CurrencyPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0 SC"

[node name="ScrollContainer" type="ScrollContainer" parent="SafeAreaMargin/MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentVBox" type="VBoxContainer" parent="SafeAreaMargin/MainVBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 30

[node name="UpgradesSection" type="VBoxContainer" parent="SafeAreaMargin/MainVBox/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="UpgradesTitleLabel" type="Label" parent="SafeAreaMargin/MainVBox/ScrollContainer/ContentVBox/UpgradesSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
text = "‚¨ÜÔ∏è AM√âLIORATIONS"

[node name="UpgradesContainer" type="VBoxContainer" parent="SafeAreaMargin/MainVBox/ScrollContainer/ContentVBox/UpgradesSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12

[node name="EquipmentSection" type="VBoxContainer" parent="SafeAreaMargin/MainVBox/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="EquipmentTitleLabel" type="Label" parent="SafeAreaMargin/MainVBox/ScrollContainer/ContentVBox/EquipmentSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.6, 0.9, 0.5, 1)
text = "üéí √âQUIPEMENT"

[node name="EquipmentContainer" type="VBoxContainer" parent="SafeAreaMargin/MainVBox/ScrollContainer/ContentVBox/EquipmentSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12

[node name="StatsSection" type="VBoxContainer" parent="SafeAreaMargin/MainVBox/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="StatsTitleLabel" type="Label" parent="SafeAreaMargin/MainVBox/ScrollContainer/ContentVBox/StatsSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
text = "üìä STATISTIQUES"

[node name="StatsContainer" type="VBoxContainer" parent="SafeAreaMargin/MainVBox/ScrollContainer/ContentVBox/StatsSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10
